...
  'payment-vouchers' => 'سند دفع',
  'overview' => l10n.financeSectionOverview,
  'transactions' => l10n.financeSectionTransactions,
  'vouchers' => 'السندات والقيود',
  'cashbanks' => l10n.financeSectionCashBanks,
  'expenses' => l10n.financeSectionExpenses,
  'purchases' => 'المشتريات',
  'sales' => 'المبيعات',
  'suppliers' => l10n.financeSectionSuppliers,
  'reconciliation' => l10n.financeSectionReconciliation,
  'journals' => l10n.financeSectionJournals,
  'closing' => l10n.financeSectionClosing,
  'reports' => l10n.financeSectionReports,
  'accounts' => l10n.financeSectionAccounts,
...
